--- a/src/components/home/Feature/Feature.css
+++ b/src/components/home/Feature/Feature.css
@@ -129,9 +129,6 @@
   .ho-feature {
     grid-template-columns: 1fr;
   }
-  .ho-feature__title {
-    font-size: 44px;
-  }
 }
 @media (max-width: 640px) {
   .ho-feature__bullets {
@@ -142,10 +139,5 @@
   }
   .ho-feature__bullet:nth-child(even) {
     padding-left: 0;
-  }
-}
-@media (max-width: 500px) {
-  .ho-feature__title {
-    font-size: clamp(24px, 7vw, 32px);
   }
 }
